--- a/css/sample.css
+++ b/css/sample.css
@@ -251,15 +251,25 @@ h1 {
   background-image: url("../images/news/sub_cover.jpg");
   background-size: cover;
   background-color: white; }
-
-#sub_cover h2 {
-  text-align: center;
-  color: white;
-  font-size: 16px;
-  font-size: 1.6rem;
-  font-weight: bold;
-  margin: 0;
-  letter-spacing: 0.2rem; }
+  #sub_cover h2 {
+    text-align: center;
+    color: white;
+    font-size: 16px;
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin: 0;
+    letter-spacing: 0.2rem; }
+  @media (min-width: 550px) {
+    #sub_cover {
+      padding: 80px 0; }
+      #sub_cover h2 {
+        text-align: center;
+        color: white;
+        font-size: 32px;
+        font-size: 3.2rem;
+        font-weight: bold;
+        margin: 0;
+        letter-spacing: 0.2rem; } }
 
 #contents {
   padding-top: 20px; }
@@ -271,6 +281,11 @@ h1 {
     font-size: 1.5rem;
     font-weight: bold;
     padding-bottom: 15px; }
+  @media (min-width: 550px) {
+    #contents h2 {
+      font-size: 20px;
+      font-size: 2rem;
+      padding-bottom: 20px; } }
   #contents .news_li {
     font-size: 15px;
     font-size: 1.5rem;
@@ -280,36 +295,42 @@ h1 {
     display: block;
     font-weight: bold;
     margin-bottom: 3px; }
-
-#sidebar {
-  padding-bottom: 20px; }
-  @media (max-width: 550px) {
-    #sidebar .pc_sidemenu {
-      display: none; } }
-
-#contents #sidebar .pc_sidemenu h3 {
-  color: #42b9d0;
-  font-size: 14px;
-  font-size: 1.4rem;
-  letter-spacing: 0.2rem;
-  font-weight: bold;
-  background-color: #f3f9fb;
-  padding: 15px;
-  margin-bottom: 0px; }
-
-#contents #sidebar .pc_sidemenu li {
-  list-style: none;
-  display: block;
-  border-bottom: 1px solid #e5e5e5;
-  background-repeat: no-repeat;
-  background-position: 8px center;
-  margin-bottom: 0px;
-  padding: 10px 10px 10px 20px;
-  background-image: url("../images/news/side_arrow.png");
-  background-size: 4px 8px; }
-
-#contents #sidebar .pc_sidemenu li a {
-  color: #339fd1;
-  text-decoration: none; }
+  #contents #sidebar {
+    padding-bottom: 20px; }
+    @media (max-width: 550px) {
+      #contents #sidebar .pc_sidemenu {
+        display: none; } }
+    #contents #sidebar .pc_sidemenu h3 {
+      color: #42b9d0;
+      font-size: 14px;
+      font-size: 1.4rem;
+      letter-spacing: 0.2rem;
+      font-weight: bold;
+      background-color: #f3f9fb;
+      padding: 15px;
+      margin-bottom: 0px; }
+    #contents #sidebar .pc_sidemenu li {
+      list-style: none;
+      display: block;
+      border-bottom: 1px solid #e5e5e5;
+      background-repeat: no-repeat;
+      background-position: 8px center;
+      margin-bottom: 0px;
+      padding: 10px 10px 10px 20px;
+      background-image: url("../images/news/side_arrow.png");
+      background-size: 4px 8px; }
+    #contents #sidebar .pc_sidemenu a {
+      color: #339fd1;
+      text-decoration: none; }
+  #contents #main th {
+    padding-right: 20px;
+    color: #626262;
+    font-size: 14px;
+    font-size: 1.4rem; }
+  #contents #main td {
+    padding: 20px 0;
+    color: #626262;
+    font-size: 14px;
+    font-size: 1.4rem; }
 
 /*# sourceMappingURL=sample.css.map */
