--- a/css/sample.scss
+++ b/css/sample.scss
@@ -469,22 +469,35 @@ h1{
 
 
 #sub_cover {
-    padding: 40px 0;
-    background-image: url("../images/news/sub_cover.jpg");
-    background-size: cover;
-    background-color: white;
-}
-
-#sub_cover h2 {
-    text-align: center;
-    color: white;
-    font-size: 16px;
-    font-size: 1.6rem;
-    font-weight: bold;
-    margin: 0;
-    letter-spacing: 0.2rem;
-}
-// sub_cover
+  padding: 40px 0;
+  background-image: url("../images/news/sub_cover.jpg");
+  background-size: cover;
+  background-color: white;
+    
+    h2 {
+      text-align: center;
+      color: white;
+      font-size: 16px;
+      font-size: 1.6rem;
+      font-weight: bold;
+      margin: 0;
+      letter-spacing: 0.2rem;
+    }
+    
+  @media (min-width: 550px){
+  padding: 80px 0;
+  
+    h2 {
+      text-align: center;
+      color: white;
+      font-size: 32px;
+      font-size: 3.2rem;
+      font-weight: bold;
+      margin: 0;
+      letter-spacing: 0.2rem;
+    }
+  }
+}// #sub_cover
 
 #contents {
     padding-top: 20px;
@@ -498,62 +511,88 @@ h1{
       font-weight: bold;
       padding-bottom: 15px;
     }
+    
+    @media (min-width: 550px){
+     h2 {
+      font-size: 20px;
+      font-size: 2rem;
+      padding-bottom: 20px;
+      }
+    }
   
-     .news_li {
-        font-size: 15px;
-        font-size: 1.5rem;
-        list-style: none;
-       }
+   .news_li {
+      font-size: 15px;
+      font-size: 1.5rem;
+      list-style: none;
+    }
        
-       span {
-          color: #42b9d0;
-          display: block;
-          font-weight: bold;
-          margin-bottom: 3px;
-        }
-     
-   } 
- //news.html_news  
+   span {
+      color: #42b9d0;
+      display: block;
+      font-weight: bold;
+      margin-bottom: 3px;
+    }
+
+//news.html_news  
   
     #sidebar {
       padding-bottom: 20px;
-  
-      @media (max-width: 550px){
-        .pc_sidemenu {
-        display: none;
+      
+    @media (max-width: 550px){
+    .pc_sidemenu {
+      display: none;
         }
       }
-    }
+      
+    .pc_sidemenu {
+      
+      h3 {
+        color: #42b9d0;
+        font-size: 14px;
+        font-size: 1.4rem;
+        letter-spacing: 0.2rem;
+        font-weight: bold;
+        background-color: #f3f9fb;
+        padding: 15px;
+        margin-bottom: 0px;
+      }
+      
+      li {
+        list-style: none;
+        display: block;
+        border-bottom: 1px solid #e5e5e5;
+        background-repeat: no-repeat;
+        background-position: 8px center;
+        margin-bottom: 0px;
+        padding: 10px 10px 10px 20px;
+        background-image: url("../images/news/side_arrow.png");
+        background-size: 4px 8px;
+      }      
+          
+    a {
+      color: #339fd1;
+      text-decoration: none;
+      }
+          
+    }//.pc_sidemenu
+  }//#sidebar
    
- 
- #contents #sidebar .pc_sidemenu h3 {
-    color: #42b9d0;
-    font-size: 14px;
-    font-size: 1.4rem;
-    letter-spacing: 0.2rem;
-    font-weight: bold;
-    background-color: #f3f9fb;
-    padding: 15px;
-    margin-bottom: 0px;
-}
-
-#contents #sidebar .pc_sidemenu li {
-    list-style: none;
-    display: block;
-    border-bottom: 1px solid #e5e5e5;
-    background-repeat: no-repeat;
-    background-position: 8px center;
-    margin-bottom: 0px;
-    padding: 10px 10px 10px 20px;
-    background-image: url("../images/news/side_arrow.png");
-    background-size: 4px 8px;
-}
-
-#contents #sidebar .pc_sidemenu li a {
-    color: #339fd1;
-    text-decoration: none;
-}
 //sidemenu
 
+   #main {
+   th {
+      padding-right: 20px;
+      color: #626262;
+      font-size: 14px;
+      font-size: 1.4rem;
+      }
+  
+   td {
+      padding: 20px 0;
+      color: #626262;
+      font-size: 14px;
+      font-size: 1.4rem;
+    }
+  }//company.html#main
 
-
+} //contens
